After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 728774 - omxvp8dec: fix typo in GST_TYPE_OMX_VP8_DEC define
omxvp8dec: fix typo in GST_TYPE_OMX_VP8_DEC define
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-omx
git master
Other Linux
: Normal normal
: 1.2.0
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-04-23 08:01 UTC by Aurélien Zanelli
Modified: 2014-07-23 08:14 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
omxvp8dec: fix typo in GST_TYPE_OMX_VP8_DEC define (746 bytes, patch)
2014-04-23 08:01 UTC, Aurélien Zanelli
committed Details | Review

Description Aurélien Zanelli 2014-04-23 08:01:59 UTC
Created attachment 274935 [details] [review]
omxvp8dec: fix typo in GST_TYPE_OMX_VP8_DEC define

There is a little typo mistake in GST_TYPE_OMX_VP8_DEC define. I attached a patch to fix it.
Comment 1 Sebastian Dröge (slomo) 2014-04-23 08:35:20 UTC
commit 420b0b62d33dcc45606cd862136866d5bf348d1f
Author: Aurélien Zanelli <aurelien.zanelli@parrot.com>
Date:   Wed Apr 23 09:57:48 2014 +0200

    omxvp8dec: fix typo in GST_TYPE_OMX_VP8_DEC define
    
    https://bugzilla.gnome.org/show_bug.cgi?id=728774