omxvp8dec: fix typo in GST_TYPE_OMX_VP8_DEC define

https://bugzilla.gnome.org/show_bug.cgi?id=728774